<resources>
    <string name="app_name">LoginApp</string>
    <string name="hint_email">Insira o e-mail</string>
    <string name="hint_password">Insira a senha</string>
    <string name="action_register">criar conta</string>
    <string name="sign_in">entrar</string>
    <string name="register">registrar</string>
    <string name="welcome">\"Olá, \"</string>
    <string name="logout">Sair</string>
    <string name="hint_editText">Como você está se sentindo hoje?</string>
    <string name="user_email">User email</string>
    <string name="send">enviar</string>
</resources>