<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cat"
    tools:context=".ui.home.view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="@dimen/text_20"
            android:layout_marginTop="@dimen/size_50"
            android:layout_marginStart="@dimen/size_35"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_editText"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            android:textSize="@dimen/text_16"
            android:maxLines="5"
            android:maxLength="300"
            android:layout_marginTop="@dimen/size_50"
            android:layout_marginStart="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_30"
            app:layout_constraintTop_toBottomOf="@id/tvUserEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:background="#D8D2D2"
            android:layout_marginEnd="@dimen/size_30"
            app:layout_constraintTop_toBottomOf="@id/edUserText"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvText"
            android:layout_width="@dimen/size_150"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text_color"
            android:layout_marginTop="@dimen/size_50"
            android:layout_marginStart="@dimen/size_30"
            app:layout_constraintTop_toBottomOf="@id/tvSendText"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>